--- a/requirements.txt
+++ b/requirements.txt
@@ -7,7 +7,7 @@ SpeechRecognition==3.10.4
 setuptools==74.1.2
 cloudinary==1.37.0
 gunicorn==23.0.0
-opencv-python==4.10.0.84
+opencv-python-headless==4.10.0.84
 click==8.1.7
 itsdangerous==2.2.0
 Jinja2==3.1.4
